--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
     "redis": "^4.3.1",
     "ts-node-dev": "^2.0.0",
