--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/lodash": "^4.14.186",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.7",
+    "@types/nodemailer": "^6.4.9",
     "morgan": "^1.10.0",
     "standard-version": "^9.5.0",
     "typescript": "^4.8.4"
@@ -46,10 +47,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
+    "nodemailer": "^6.9.4",
     "redis": "^4.3.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.19.1"
