--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/lodash": "^4.14.186",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.7",
+    "@types/node-cron": "^3.0.8",
     "@types/nodemailer": "^6.4.9",
     "morgan": "^1.10.0",
     "standard-version": "^9.5.0",
@@ -45,6 +46,7 @@
     "config": "^3.3.8",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "discord.js": "^14.13.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -53,6 +55,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "redis": "^4.3.1",
     "ts-node-dev": "^2.0.0",
